--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 </div>
 </section>
 <!-- Our Portfolio -->
-<section class="our-portfolio hiden">
+<section class="our-portfolio">
     <div class="container">
     <h2 class="our-portfolio-title">Our Portfolio</h2>
     <ul class="our-portfolio-list">
