--- a/index.html
+++ b/index.html
@@ -332,7 +332,12 @@
         <li class="our-portfolio-item">
             <div class="portfolio-item">
             <div class="our-portfolio-cover-wrap">
-            <img class="portfolio-image" src="./images/Banking-App.jpg" alt="image: Banking App" width="360" height="300">
+                <picture>
+                    <source srcset="./images/Banking-App.jpg 1x, 
+                    ./images/Banking-App.jpg@2x 2x">
+            <img class="portfolio-image" src="./images/Banking-App.jpg" 
+            alt="image: Banking App" width="360" height="300">
+            </picture>
             <p class="our-portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
             Cloud Storage App</p>
             </div>
@@ -348,7 +353,12 @@
         <li class="our-portfolio-item">
             <div class="portfolio-item">
                 <div class="our-portfolio-cover-wrap">
-            <img src="./images/Cashless-Payment.jpg" alt="image: Cashless Payment" width="360" height="300">
+                    <picture>
+                        <source srcset="./images/Cashless-Payment.jpg 1x, 
+                        ./images/Cashless-Payment.jpg@2x 2x">
+            <img src="./images/Cashless-Payment.jpg" 
+            alt="image: Cashless Payment" width="360" height="300">
+            </picture>
             <p class="our-portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                 Tracker App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
@@ -364,7 +374,12 @@
         <li class="our-portfolio-item">
             <div class="portfolio-item">
                 <div class="our-portfolio-cover-wrap">
-            <img src="./images/Meditation-App.jpg" alt="image: Meditation App" width="360" height="300">
+                    <picture>
+                        <source srcset="./images/Meditation-App.jpg 1x,
+                         ./images/Meditation-App.jpg@2x 2x">
+            <img src="./images/Meditation-App.jpg"
+             alt="image: Meditation App" width="360" height="300">
+            </picture>
             <p class="our-portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                 Tracker App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
@@ -380,7 +395,12 @@
         <li class="our-portfolio-item">
             <div class="portfolio-item">
                 <div class="our-portfolio-cover-wrap">
-            <img src="./images/Taxi-Service.jpg" alt="image: Taxi Service" width="360" height="300">
+                    <picture>
+                        <source srcset="./images/Taxi-Service.jpg 1x, 
+                        ./images/Taxi-Service.jpg@2x 2x">
+            <img src="./images/Taxi-Service.jpg" 
+            alt="image: Taxi Service" width="360" height="300">
+            </picture>
             <p class="our-portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                 Tracker App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
@@ -396,7 +416,12 @@
         <li class="our-portfolio-item">
             <div class="portfolio-item">
                 <div class="our-portfolio-cover-wrap">
-            <img src="./images/Screen-Illustrations.jpg" alt="image: Screen Illustrations" width="360" height="300">
+                    <picture>
+                        <source srcset="./images/Screen-Illustrations.jpg 1x, 
+                        ./images/Screen-Illustrations.jpg@2x 2x">
+            <img src="./images/Screen-Illustrations.jpg"
+             alt="image: Screen Illustrations" width="360" height="300">
+            </picture>
             <p class="our-portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                 Tracker App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
@@ -412,7 +437,12 @@
         <li class="our-portfolio-item">
             <div class="portfolio-item">
                 <div class="our-portfolio-cover-wrap">
-            <img src="./images/Online-Courses.jpg" alt="image: Online Courses" width="360" height="300">
+                    <picture>
+                        <source srcset="./images/Online-Courses.jpg 1x,
+                        ./images/Online-Courses.jpg@2x 2x">
+            <img src="./images/Online-Courses.jpg"
+             alt="image: Online Courses" width="360" height="300">
+            </picture>
                     <p class="our-portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                         Tracker App · Exotic Fruit Ecommerce App ·
                         Cloud Storage App</p>
@@ -428,7 +458,7 @@
 </section>
     </main>
 
-    <footer class="footer hiden">
+    <footer class="footer">
         <div class="container footer-container">
             <div class="footer-content">
         <a class="logo-web link-logo-footer" href="./index.html">WEB<span class="logo-studio-footer">Studio</span></a>
