--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     </div>
     </div>
     </footer>
-<div class="backdrop hiden">
+<div class="backdrop is-open">
     <div class="modal">
         <button class="close-btn" type="button">
             <svg class="close-btn-icon" width="8" height="8">
