--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <div class="our-portfolio-cover-wrap">
                 <picture>
                     <source srcset="./images/Banking-App.jpg 1x, 
-                    ./images/Banking-App.jpg@2x 2x">
+                    ./images/Banking-App@2x.jpg 2x">
             <img class="portfolio-image" src="./images/Banking-App.jpg" 
             alt="image: Banking App" width="360" height="300">
             </picture>
@@ -347,7 +347,7 @@
                 <div class="our-portfolio-cover-wrap">
                     <picture>
                         <source srcset="./images/Cashless-Payment.jpg 1x, 
-                        ./images/Cashless-Payment.jpg@2x 2x">
+                        ./images/Cashless-Payment@2x.jpg 2x">
             <img src="./images/Cashless-Payment.jpg" 
             alt="image: Cashless Payment" width="360" height="300">
             </picture>
@@ -368,7 +368,7 @@
                 <div class="our-portfolio-cover-wrap">
                     <picture>
                         <source srcset="./images/Meditation-App.jpg 1x,
-                         ./images/Meditation-App.jpg@2x 2x">
+                         ./images/Meditation-App@2x.jpg 2x">
             <img src="./images/Meditation-App.jpg"
              alt="image: Meditation App" width="360" height="300">
             </picture>
@@ -389,7 +389,7 @@
                 <div class="our-portfolio-cover-wrap">
                     <picture>
                         <source srcset="./images/Taxi-Service.jpg 1x, 
-                        ./images/Taxi-Service.jpg@2x 2x">
+                        ./images/Taxi-Service@2x.jpg 2x">
             <img src="./images/Taxi-Service.jpg" 
             alt="image: Taxi Service" width="360" height="300">
             </picture>
@@ -410,7 +410,7 @@
                 <div class="our-portfolio-cover-wrap">
                     <picture>
                         <source srcset="./images/Screen-Illustrations.jpg 1x, 
-                        ./images/Screen-Illustrations.jpg@2x 2x">
+                        ./images/Screen-Illustrations@2x.jpg 2x">
             <img src="./images/Screen-Illustrations.jpg"
              alt="image: Screen Illustrations" width="360" height="300">
             </picture>
@@ -431,7 +431,7 @@
                 <div class="our-portfolio-cover-wrap">
                     <picture>
                         <source srcset="./images/Online-Courses.jpg 1x,
-                        ./images/Online-Courses.jpg@2x 2x">
+                        ./images/Online-Courses@2x.jpg 2x">
             <img src="./images/Online-Courses.jpg"
              alt="image: Online Courses" width="360" height="300">
             </picture>
