--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
             <div class="portfolio-item">
             <div class="our-portfolio-cover-wrap">
                 <picture>
-                    <source srcset="./images/Banking-App.jpg 1x, 
-                    ./images/Banking-App@2x.jpg 2x">
+                    <source srcset="./images/BankingApp.jpg 1x, 
+                    ./images/BankingApp@2x.jpg 2x">
             <img class="portfolio-image" src="./images/Banking-App.jpg" 
             alt="image: Banking App" width="360" height="300">
             </picture>
